tdf#130770 apply autofilter always regardless of autofilter changes

The old implementation checked in AutoFilterMode::Normal mode if
the filter itself has changed, but did not take into accout that data
might have been changed.
The autofilter should always be applied in AutoFilterMode::Normal mode.
The check if there are any changes in the autofilter itself is
not necessary anymore.
We could add eMode != AutoFilterMode::Normal to the deleted if().

However, all the cases of enum AutoFilterMode are handled:
- Normal: We do not want a check anymore in deleted if()
- Top10: Already excluded in deleted if()
- Custom:  Already handled before
- Empty: Already excluded in deleted if()
- NonEmpty: Already excluded in deleted if()
- SortAscending:  Already handled before
- SortDescending:  Already handled before

Thus, as there are no more cases left for the if(), it can be deleted.

Change-Id: I1a5362f6edf6d28b3e049977d761cef83897e63e