sc/source/ui/view/gridwin.cxx
@@ -799,20 +799,6 @@ void ScGridWindow::UpdateAutoFilterFromMenu(AutoFilterMode eMode)
         pViewData->GetDispatcher().Execute(SID_FILTER, SfxCallMode::SLOT|SfxCallMode::RECORD);
         return;
     }
-    if (eMode != AutoFilterMode::Top10
-            && eMode != AutoFilterMode::Empty
-            && eMode != AutoFilterMode::NonEmpty)
-    {
-        // do not recreate auto-filter rules if there is no any changes from the user
-        ScCheckListMenuWindow::ResultType aResult;
-        mpAutoFilterPopup->getResult(aResult);
-
-        if (aResult == aSaveAutoFilterResult)
-        {
-            SAL_INFO("sc.ui", "nothing to do when autofilter entries are the same");
-            return;
-        }
-    }
 
     ScQueryParam aParam;
     pDBData->GetQueryParam(aParam);
